[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/ui/hud.gd" id="1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 200)

[node name="WorldInfo" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Mundo: --"

[node name="Health" type="TextureProgressBar" parent="MarginContainer/VBox"]
layout_mode = 2
value = 100.0
max_value = 100.0
step = 1.0
show_percentage = true

[node name="Inventory" type="RichTextLabel" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
text = "[center]Inventário Vazio[/center]"
bbcode_enabled = true

[node name="Status" type="RichTextLabel" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
text = "[i]Mensagens do mundo aparecerão aqui.[/i]"
bbcode_enabled = true

[node name="ShopPanel" type="Panel" parent="MarginContainer/VBox"]
layout_mode = 2
visible = false

[node name="ShopVBox" type="VBoxContainer" parent="MarginContainer/VBox/ShopPanel"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="ShopTitle" type="Label" parent="MarginContainer/VBox/ShopPanel/ShopVBox"]
layout_mode = 2
text = "Loja"

[node name="ShopItems" type="RichTextLabel" parent="MarginContainer/VBox/ShopPanel/ShopVBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="ToggleDiary" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Diário"

[node name="DiaryPanel" type="Panel" parent="MarginContainer/VBox"]
layout_mode = 2
visible = false

[node name="DiaryVBox" type="VBoxContainer" parent="MarginContainer/VBox/DiaryPanel"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="DiaryTitle" type="Label" parent="MarginContainer/VBox/DiaryPanel/DiaryVBox"]
layout_mode = 2
text = "Diário de Memórias"

[node name="DiaryEntries" type="RichTextLabel" parent="MarginContainer/VBox/DiaryPanel/DiaryVBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="CloseDiary" type="Button" parent="MarginContainer/VBox/DiaryPanel/DiaryVBox"]
layout_mode = 2
text = "Fechar"

[node name="StartPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartVBox" type="VBoxContainer" parent="StartPanel"]
layout_mode = 2
anchors_preset = 8
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = 200.0
margin_right = -400.0
margin_bottom = -200.0

[node name="Title" type="Label" parent="StartPanel/StartVBox"]
layout_mode = 2
text = "Echoes of Everchange"
horizontal_alignment = 1

[node name="SeedLabel" type="Label" parent="StartPanel/StartVBox"]
layout_mode = 2
text = "Escolha uma Seed (deixe vazio para aleatória):"

[node name="SeedInput" type="LineEdit" parent="StartPanel/StartVBox"]
layout_mode = 2
placeholder_text = "Seed"

[node name="StartButton" type="Button" parent="StartPanel/StartVBox"]
layout_mode = 2
text = "Entrar"

[node name="RunInfo" type="RichTextLabel" parent="StartPanel/StartVBox"]
layout_mode = 2
size_flags_vertical = 3
text = "A cada mundo, tudo muda, mas você lembra."
bbcode_enabled = true
